--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         // Function to load tasks from Google Apps Script
         async function loadTasks() {
             try {
-                const response = await fetch('YOUR_GAS_GET_TASKS_URL');
+                const response = await fetch('https://script.google.com/macros/s/AKfycbzL3DSTspPVjqkmRb0fyDiA1xRxIhA5FznBAYnciuNK6-0d7JMaJ7q2VM1XikmfWPC6SQ/exec');
                 const data = await response.json();
                 
                 if (data.success) {
@@ -248,7 +248,7 @@
         // Function to send schedule data to Google Apps Script
         async function saveScheduleData(scheduleData) {
             try {
-                const response = await fetch('YOUR_GAS_SAVE_SCHEDULE_URL', {
+                const response = await fetch('https://script.google.com/macros/s/AKfycbxzKLIyWiwL8QZoyYzjiIQh_NgAPVJFUgPzUzk-aaO25ntWwmlwDv74WGRg_GQaadXTvg/exec', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
